--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
 <head>
-	<title>The Roofbar</title>
+	<title>The Roofbar nyc</title>
+	<link rel="stylesheet" type="text/css" href="css/boostrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/dolphin.css">
 </head>
 <body>
+
+	<script type="text/javascript" src="js/boostrap.min.js"></script>
+
+
 
 </body>
 </html>
