--- a/social.html
+++ b/social.html
@@ -1,12 +1,13 @@
 <html>
 <head>
 	<title>The Roofbar nyc</title>
-	<link rel="stylesheet" type="text/css" href="css/boostrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/dolphin.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/custom.css">
 </head>
 <body>
 
-	<script type="text/javascript" src="js/boostrap.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
 
 
 
