--- a/social.html
+++ b/social.html
@@ -2,7 +2,8 @@
 <head>
 	<title>The Roofbar nyc</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/custom.css">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body>
 
