--- a/about.html
+++ b/about.html
@@ -1,10 +1,29 @@
 <html>
 <head>
-	<title>The Roofbar nyc</title>
+	<title>The Roofbar NYC</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/custom.css">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/app.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 </head>
 <body>
+
+	<nav class="navbar navbar-default nopadding">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand active" href="index.html">The Roofbar</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a href="about.html">About</a></li>
+      <li><a href="location.html">Location</a></li>
+      <li><a href="order.html">Order</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> 
+      <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></li></a>
+      <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></li> </a>
+    </ul>
+  </div>
+</nav>
 
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
