--- a/index.html
+++ b/index.html
@@ -1,10 +1,113 @@
 <html>
 <head>
-	<title>The Roofbar nyc</title>
+	<title>The Roofbar NYC</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/custom.css">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/app.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 </head>
 <body>
+
+	<nav class="navbar navbar-default nopadding">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand active" href="index.html">The Roofbar</a>
+    </div>
+    <ul class="nav navbar-right">
+      <li><a href="about.html">About</a></li>
+      <li><a href="location.html">Location</a></li>
+      <li><a href="order.html">Order</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> 
+      <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></li></a>
+      <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></li> </a>
+    </ul>
+  </div>
+</nav>
+
+<div id="myCarousel" class="carousel slide nopadding" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="images/2399.jpg" alt="" width="100%" view-height="450px">
+      </div>
+
+      <div class="item">
+        <img src="images/3967.jpg" alt="" width="100%" height="450px">
+      </div>
+    
+      <div class="item">
+        <img src="images/4048.jpg" alt="" width="100%" height="450px">
+      </div>
+
+      <div class="item">
+        <img src="images/3967.jpg" alt="Flower" width="100%" height="450px">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+<div class="col-md-12">
+	<div class="locationmap">
+<div class="col-md-8">
+
+	<iframe id="map" class="border" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1510.9402970151746!2d-73.97940553803708!3d40.764650915001866!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258f75c282e05%3A0x7f8aca7c0b935704!2sThe+Roof!5e0!3m2!1sen!2sus!4v1466638540001" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+</div> <!-- col-md-6 -->
+
+<div class="col-md-4">
+
+	<div class="informationdetailed">
+
+	PHONE
+(718) 606-6532
+
+LOCATION
+35-01 Ditmars Blvd
+Astoria, NY 11106
+
+HOURS
+Closed on Mondays
+Lunch (Tuesday to Friday)
+ 1:00 - 4:00 pm
+Dinner* (Sunday to Thursday)
+5:00 - 10:00 pm
+
+*on Friday & Saturday until 11pm
+
+Weekend Brunch 12:00 - 4:00 pm
+Happy Hour  4:00 - 7:00 p.m.
+
+</div>
+
+ </div> <!-- col-md-4 -->
+
+
+
+
+
+
+
+</div> <!-- col-md-12 -->
+
 
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
