--- a/about.html
+++ b/about.html
@@ -1,10 +1,12 @@
 <html>
 <head>
 	<title>The Roofbar NYC</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+
 </head>
 <body>
 
@@ -13,7 +15,7 @@
     <div class="navbar-header">
       <a class="navbar-brand active" href="index.html">The Roofbar</a>
     </div>
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-nav navbar-right">
       <li><a href="about.html">About</a></li>
       <li><a href="location.html">Location</a></li>
       <li><a href="order.html">Order</a></li>
