--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 	<nav class="navbar navbar-default nopadding">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand active" href="index.html">The Roofbar</a>
+    <div class="navbar-header ">
+      <a class="navbar-brand active" href="index.html">THE ROOFBAR</a>
     </div>
-    <ul class="nav navbar-right">
+    <ul class="nav navbar-nav navbar-right">
       <li><a href="about.html">About</a></li>
       <li><a href="location.html">Location</a></li>
-      <li><a href="order.html">Order</a></li>
+      <li><a href="#">Order</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> 
       <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></li></a>
@@ -29,7 +29,7 @@
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target=".item" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
       <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
@@ -37,7 +37,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="images/2399.jpg" alt="" width="100%" view-height="450px">
+        <img src="images/2399.jpg" alt="" width="100%" view-height="250">
       </div>
 
       <div class="item">
@@ -49,7 +49,7 @@
       </div>
 
       <div class="item">
-        <img src="images/3967.jpg" alt="Flower" width="100%" height="450px">
+        <img src="images/3967.jpg" alt="Flower" width="100%" height="250px">
       </div>
     </div>
 
@@ -65,13 +65,15 @@
   </div>
 </div>
 
+<div class="row"> 
+
 <div class="col-md-12">
 	<div class="locationmap">
 <div class="col-md-8">
 
 	<iframe id="map" class="border" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1510.9402970151746!2d-73.97940553803708!3d40.764650915001866!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258f75c282e05%3A0x7f8aca7c0b935704!2sThe+Roof!5e0!3m2!1sen!2sus!4v1466638540001" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-</div> <!-- col-md-6 -->
+</div> <!-- col-md-8 -->
 
 <div class="col-md-4">
 
@@ -100,10 +102,17 @@ Happy Hour  4:00 - 7:00 p.m.
 
  </div> <!-- col-md-4 -->
 
+</div> <!-- col-md-12 -->
+
+</div> <!-- row -->
+
+<div class="col-md-12">
+
+	<div class="footer">
 
 
 
-
+	</div>
 
 
 </div> <!-- col-md-12 -->
