--- a/about.html
+++ b/about.html
@@ -28,6 +28,16 @@
   </div>
 </nav>
 
+<div class="col-md-12 nopadding">
+  <img src ="images/4098.jpg" width="100%">
+
+
+</div>
+
+
+
+</div> <!-- col-md-12 -->
+
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
 
