setting up the layout

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>The Roofbar NYC</title>
+	<title>The RoofbarNYC</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
@@ -20,9 +20,9 @@
       <a class="navbar-brand active" href="index.html">The Roofbar</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="about.html">About</a></li>
-      <li><a href="about.html">Menu</a></li>
-      <li><a href="location.html">Location</a></li>
+      <li><a href="#locationmap">Location</a></li>
+      <li><a href="#about2">About</a></li>
+       <li><a href="menu.html">Menu</a></li>
       <li><a data-toggle="modal" data-target=".bs-example-modal-lg" href="#">Order</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> 
@@ -75,21 +75,18 @@
 <div class="row"> 
 
 <div class="col-md-12">
-	<div class="locationmap">
-<div class="col-md-8">
+	<div id="locationmap">
 
 	<iframe id="map" class="border" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1510.9402970151746!2d-73.97940553803708!3d40.764650915001866!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258f75c282e05%3A0x7f8aca7c0b935704!2sThe+Roof!5e0!3m2!1sen!2sus!4v1466638540001" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-</div> <!-- col-md-8 -->
-
-<div class="col-md-4">
+</div> <!-- locationmap -->
 
 	<div class="informationdetailed">
 
-PHONE
-(718) 606-6532
+  PHONE:
+  (718) 606-6532
 
-LOCATION
+LOCATION:
 35-01 Ditmars Blvd
 Astoria, NY 11106
 
@@ -107,9 +104,27 @@ Happy Hour  4:00 - 7:00 p.m.
 
 </div>
 
- </div> <!-- col-md-4 -->
-
 </div> <!-- col-md-12 -->
+
+</div> <!-- row -->
+
+<div class="row">
+
+  <div class="col-md-12" id="about2">
+
+    <img src="images/4098.jpg" width="100%">
+
+    </div> <!-- col-md-12 -->
+
+    <div class="col-md-12">
+
+    <div class="textbox">
+
+      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+    </div> <!-- about -->
+
+  </div> <!-- col-md-12 -->
 
 </div> <!-- row -->
 
@@ -125,7 +140,10 @@ Happy Hour  4:00 - 7:00 p.m.
 
 <div class="col-md-12">
 
+
 	<div class="footer">
+
+    <p> THEROOFBARTOPNYC@2016</p>
 
 	</div> <!-- footer -->
 
