--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
       <a class="navbar-brand active" href="index.html">The Roofbar</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="about.html">About</a></li>
+      <li><a href="index.html#ab">About</a></li>
       <li><a href="about.html">Menu</a></li>
       <li><a href="location.html">Location</a></li>
       <li><a href="order.html">Order</a></li>
@@ -28,9 +28,55 @@
   </div>
 </nav>
 
+<div class="row">
+        <div class="col-md-6">
+  
+         <form id="contact_form" action="#" method="Post"enctype="multipart/form-data">
+       <div class="row">
+             <label for="fname">First name:</label><br/>
+             <input id="fname" class="input" name="fname" type="text" value="" size="30"/><br/>
+       </div>
+              <div class="row">
+              <label for="lname">Last Name:</label><br/>
+              <input id="lname" class="input" name="lname" type="text" value="" size="30"/><br/>
+       </div>
+       <div class="row">
+              <label for="email">Email:</label><br/>
+              <input id="email" class="input" name="email" type="text" value="" size="30"/><br/>
+       </div>
+              <div class="row">
+              <label for="pnumber">Phone Number:</label><br/>
+              <input id="pnumber" class="input" name="pnumber" type="text" value="" size="30"/><br/>
+       </div>
+       <div class="row>"
+              <label for="message">Message:</label><br/>
+              <textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br/>
+        </div>
+        <input id="submit_button" type="submit" value="Send email"/>
+  </form>
+
+  
+        </div>
+
+<div class="row">
+
+  <div class="col-md-12">
+
+    <div class="footer">
+
+        <p> THEROOFBARTOPNYC@2016</p>
+
+    </div> <!-- footer -->
+
+  </div> <!-- col-md-12 -->
+
+
+
+</div> <!-- row -->
+
+
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
-
 
 
 </body>
