--- a/menu.html
+++ b/menu.html
@@ -28,6 +28,30 @@
   </div>
 </nav>
 
+<div class="row">
+
+  <div class="col-md-12">
+
+    <div class="meni">
+
+
+
+    </div> <!-- meni -->
+
+  </div> <!-- col-md-12 -->
+
+</div> <!-- row -->
+
+<div class="col-md-12 nopadding">
+
+  <div class="footer">
+
+  <p> THEROOFBARTOPNYC@2016</p>
+
+  </div> <!-- footer -->
+
+</div> <!-- row -->
+
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
 
