--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
        <li><a href="menu.html">Menu</a></li>
       <li><a data-toggle="modal" data-target=".bs-example-modal-lg" href="#">Order</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> 
-      <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></li></a>
-      <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></li> </a>
+      <li><a href="http://wwww.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> 
+      <li><a href="http://www.twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></li></a>
+      <li><a href="http://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></li> </a>
     </ul>
   </div>
 </nav>
