--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,14 @@
       <a class="navbar-brand active" href="index.html">The Roofbar</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="index.html#ab">About</a></li>
-      <li><a href="about.html">Menu</a></li>
-      <li><a href="location.html">Location</a></li>
-      <li><a href="order.html">Order</a></li>
+      <li><a href="#locationmap">Location</a></li>
+      <li><a href="#about2">About</a></li>
+       <li><a href="menu.html">Menu</a></li>
+      <li><a data-toggle="modal" data-target=".bs-example-modal-lg" href="#">Order</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> 
-      <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></li></a>
-      <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></li> </a>
+      <li><a href="http://wwww.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> 
+      <li><a href="http://www.twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></li></a>
+      <li><a href="http://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></li> </a>
     </ul>
   </div>
 </nav>
