--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,13 @@
 </nav>
 
 <div class="row">
-        <div class="col-md-6">
+  <div class="col-md-12">
+
+    <img src="images/3967.jpg" width="100%">
+    <div class="col-md-4"></div> <!-- col-md-4 -->
+        <div class="col-md-4">
   
-         <form id="contact_form" action="#" method="Post"enctype="multipart/form-data">
+         <form class="contactform" id="contact_form" action="#" method="Post"enctype="multipart/form-data">
        <div class="row">
              <label for="fname">First name:</label><br/>
              <input id="fname" class="input" name="fname" type="text" value="" size="30"/><br/>
@@ -55,8 +59,11 @@
         <input id="submit_button" type="submit" value="Send email"/>
   </form>
 
+</div> <!-- col-md-6-->
+
+<div class="col-md-4"></div> <!-- col-md-4 -->
   
-        </div>
+        </div> <!-- col-md-12-->
 
 <div class="row">
 
